--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,7 @@
     <dimen name="task_category_icon_margin">10dp</dimen>
     <dimen name="task_category_icon_width">150dp</dimen>
     <dimen name="task_category_icon_height">150dp</dimen>
+    <dimen name="user_icon_dimen">92dp</dimen>
+    <dimen name="payment_info_margin">30dp</dimen>
+    <dimen name="text_margin">10dp</dimen>
 </resources>
