--- a/app/src/main/res/layout/activity_task_menu.xml
+++ b/app/src/main/res/layout/activity_task_menu.xml
@@ -40,10 +40,10 @@
         </FrameLayout>
 
         <!-- viewpager to support swiping -->
-        <!--<android.support.v4.view.ViewPager-->
-            <!--android:id="@+id/viewpager"-->
-            <!--android:layout_width="fill_parent"-->
-            <!--android:layout_height="0dp" />-->
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewpager"
+            android:layout_width="fill_parent"
+            android:layout_height="0dp" />
     </RelativeLayout>
 
 </android.support.v4.app.FragmentTabHost>
