--- a/app/src/main/res/layout/fragment_home_tab.xml
+++ b/app/src/main/res/layout/fragment_home_tab.xml
@@ -7,53 +7,65 @@
 
     <!-- Hold two parts: task categories in grid layout and tab widget at bottom -->
     <GridLayout
+        android:id="@+id/gridLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:columnCount="2"
         android:rowCount="3"
-        android:orientation="horizontal"
-        android:layout_margin="@dimen/activity_horizontal_margin"
-        android:id="@+id/gridLayout">
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:layout_marginTop="15dp">
 
         <ImageButton
-            android:contentDescription="@string/one_hand_desc"
             android:id="@+id/one_hand_task_btn"
+            android:contentDescription="@string/one_hand_desc"
             android:src="@drawable/one_hand_icon"
-            android:layout_width="@dimen/task_category_icon_width"
-            android:layout_height="@dimen/task_category_icon_height"
-            android:layout_margin="@dimen/task_category_icon_margin"
             android:layout_row="0"
-            android:layout_column="0" />
+            android:layout_column="0"
+            style="@style/TaskSelectionButton"
+            />
 
         <ImageButton
-            android:contentDescription="@string/two_hand_desc"
             android:id="@+id/two_hand_task_btn"
-            android:src="@drawable/two_hand_icon"
-            android:layout_width="@dimen/task_category_icon_width"
-            android:layout_height="@dimen/task_category_icon_height"
-            android:layout_margin="@dimen/task_category_icon_margin"
+            android:contentDescription="@string/two_hand_desc"
+            android:src="@drawable/two_hands_icon"
             android:layout_row="0"
-            android:layout_column="1" />
+            android:layout_column="1"
+            style="@style/TaskSelectionButton"/>
 
         <ImageButton
-            android:contentDescription="@string/secluded_desc"
             android:id="@+id/secluded_task_btn"
-            android:src="@drawable/secluded_icon"
-            android:layout_width="@dimen/task_category_icon_width"
-            android:layout_height="@dimen/task_category_icon_height"
-            android:layout_margin="@dimen/task_category_icon_margin"
+            android:contentDescription="@string/secluded_desc"
+            android:src="@drawable/lamp_icon"
             android:layout_row="1"
-            android:layout_column="0" />
+            android:layout_column="0"
+            style="@style/TaskSelectionButton"/>
+
 
         <ImageButton
-            android:contentDescription="@string/random_desc"
-            android:id="@+id/random_task_btn"
-            android:src="@drawable/random_icon"
-            android:layout_width="@dimen/task_category_icon_width"
-            android:layout_height="@dimen/task_category_icon_height"
-            android:layout_margin="@dimen/task_category_icon_margin"
+            android:id="@+id/single_session_task_button"
+            android:contentDescription="@string/single_session_desc"
+            android:src="@drawable/clock_icon"
             android:layout_row="1"
-            android:layout_column="1" />
+            android:layout_column="1"
+            style="@style/TaskSelectionButton"/>
+
+        <ImageButton
+            android:id="@+id/traveling_task_btn"
+            android:contentDescription="@string/traveling_desc"
+            android:src="@drawable/walking_icon"
+            android:layout_row="2"
+            android:layout_column="0"
+            style="@style/TaskSelectionButton"/>
+
+        <ImageButton
+            android:id="@+id/random_task_btn"
+            android:contentDescription="@string/random_desc"
+            android:src="@drawable/criss_cross_icon"
+            android:layout_row="2"
+            android:layout_column="1"
+            style="@style/TaskSelectionButton"/>
+
     </GridLayout>
 
 </FrameLayout>
