--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,4 +5,11 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="TaskSelectionButton" parent="android:Theme.Holo.Light">
+        <item name="android:layout_width">@dimen/task_category_icon_width</item>
+        <item name="android:layout_height">@dimen/task_category_icon_height</item>
+        <item name="android:layout_margin">@dimen/task_category_icon_margin</item>
+        <item name="android:scaleType">fitCenter</item>
+    </style>
+
 </resources>
