Imported all of coligado's UIs

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="black">#ff000000</color>
     <color name="red">#FF0000</color>
     <color name="green">#49E20E</color>
+    <color name="dark_gray">#555555</color>
 </resources>
