--- a/app/src/main/res/layout/activity_one_handed_task.xml
+++ b/app/src/main/res/layout/activity_one_handed_task.xml
@@ -27,7 +27,7 @@
             android:background="@color/black"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:layout_gravity="center_horizontal"
-            android:layout_paddingBottom="10dp"
+            android:paddingBottom="10dp"
             android:layout_marginBottom="10dp"/>
 
         <ImageView
