--- a/app/src/main/res/layout/activity_secluded_task_middle2.xml
+++ b/app/src/main/res/layout/activity_secluded_task_middle2.xml
@@ -36,7 +36,7 @@
                 android:gravity="center_vertical|center_horizontal"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:layout_gravity="center_horizontal"
-                android:layout_paddingBottom="10dp"
+                android:paddingBottom="10dp"
                 android:layout_marginBottom="10dp"/>
 
             <EditText
@@ -53,7 +53,7 @@
                 android:gravity="center_vertical|center_horizontal"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:layout_gravity="center_horizontal"
-                android:layout_paddingBottom="10dp"
+                android:paddingBottom="10dp"
                 android:layout_marginBottom="10dp"/>
 
             <EditText
