--- a/app/src/main/res/layout/activity_two_handed_task.xml
+++ b/app/src/main/res/layout/activity_two_handed_task.xml
@@ -7,7 +7,7 @@
     tools:context="com.siliconvalleyinsight.mwork.activities.TwoHandedTaskActivity">
 
     <ScrollView
-        android:id="@+id/2handed_form"
+        android:id="@+id/two_handed_form"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -17,7 +17,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/2handed_prompt"
+                android:id="@+id/two_handed_prompt"
                 android:text="Please respond to each of the following questions in 4 to 5 sentences."
                 android:textSize="18dp"
                 android:layout_width="350dp"
@@ -28,7 +28,7 @@
                 android:textStyle="bold"/>
 
             <TextView
-                android:id="@+id/2handed_question_1"
+                android:id="@+id/two_handed_question_1"
                 android:text="Q1: Please describe the steps you normally take when grocery shopping."
                 android:textSize="18dp"
                 android:layout_width="fill_parent"
@@ -36,16 +36,16 @@
                 android:gravity="center_vertical|center_horizontal"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:layout_gravity="center_horizontal"
-                android:layout_paddingBottom="10dp"
+                android:paddingBottom="10dp"
                 android:layout_marginBottom="10dp"/>
 
             <EditText
-                android:id="@+id/2handed_question_1_response"
+                android:id="@+id/two_handed_question_1_response"
                 android:layout_width="fill_parent"
                 android:layout_height="100dp"/>
 
             <TextView
-                android:id="@+id/2handed_question_2"
+                android:id="@+id/two_handed_question_2"
                 android:text="Q2: Please describe the steps you normally take when grocery shopping."
                 android:textSize="18dp"
                 android:layout_width="fill_parent"
@@ -53,11 +53,11 @@
                 android:gravity="center_vertical|center_horizontal"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:layout_gravity="center_horizontal"
-                android:layout_paddingBottom="10dp"
+                android:paddingBottom="10dp"
                 android:layout_marginBottom="10dp"/>
 
             <EditText
-                android:id="@+id/2handed_question_2_response"
+                android:id="@+id/two_handed_question_2_response"
                 android:layout_width="fill_parent"
                 android:layout_height="100dp"/>
 
@@ -77,7 +77,3 @@
     </ScrollView>
 
 </LinearLayout>
-
-
-
-
