--- a/app/src/main/res/layout/activity_better_cash_out.xml
+++ b/app/src/main/res/layout/activity_better_cash_out.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.siliconvalleyinsight.mwork.BetterCashOutActivity">
+    tools:context="com.siliconvalleyinsight.mwork.activities.BetterCashOutActivity">
 
     <Space
         android:layout_width="10dp"
