--- a/app/src/main/res/layout/activity_location_entry.xml
+++ b/app/src/main/res/layout/activity_location_entry.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.siliconvalleyinsight.mwork.LocationEntryActivity">
+    tools:context="com.siliconvalleyinsight.mwork.activities.LocationEntryActivity">
 
     <ScrollView
         android:id="@+id/name_entry_form"
