--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,7 @@
         <item name="android:layout_height">@dimen/task_category_icon_height</item>
         <item name="android:layout_margin">@dimen/task_category_icon_margin</item>
         <item name="android:scaleType">fitCenter</item>
+        <item name="android:background">@color/green</item>
     </style>
 
 </resources>
