--- a/app/src/main/res/layout/activity_better_cash_out.xml
+++ b/app/src/main/res/layout/activity_better_cash_out.xml
@@ -41,6 +41,17 @@
             android:layout_weight=".10"/>
     </LinearLayout>
 
+
+    <View
+        android:id="@+id/divider_1"
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:background="#c0c0c0"/>
+
     <LinearLayout
         android:layout_width="325dp"
         android:layout_height="50dp"
@@ -72,9 +83,19 @@
             android:layout_weight=".10"/>
     </LinearLayout>
 
+     <View
+        android:id="@+id/divider_2"
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:background="#c0c0c0"/>
+
     <Space
         android:layout_width="10dp"
-        android:layout_height="80dp"/>
+        android:layout_height="30dp"/>
 
     <TextView
         android:id="@+id/cashout_type"
@@ -91,7 +112,7 @@
         android:text="Bank Account"
         style="?android:textAppearanceSmall"
         android:textColor="@color/white"
-        android:background="@color/black"
+        android:background="@color/green"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -102,7 +123,7 @@
         android:text="paypal"
         style="?android:textAppearanceSmall"
         android:textColor="@color/white"
-        android:background="@color/black"
+        android:background="@color/green"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -113,7 +134,7 @@
         android:text="venmo"
         style="?android:textAppearanceSmall"
         android:textColor="@color/white"
-        android:background="@color/black"
+        android:background="@color/green"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
