--- a/app/src/main/res/layout/fragment_payment_tab.xml
+++ b/app/src/main/res/layout/fragment_payment_tab.xml
@@ -31,7 +31,7 @@
                 android:layout_height="match_parent"
                 android:textSize="28sp"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="@string/user_name"
+                android:text="Payment Summary"
                 android:id="@+id/user_name"
                 android:gravity="center" />
 
@@ -64,7 +64,9 @@
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="@string/wage_header"
                 android:layout_row="1"
-                android:layout_column="0" />
+                android:layout_column="0"
+                android:layout_marginTop="30dp"
+                />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -76,16 +78,6 @@
                 android:layout_row="2"
                 android:layout_column="0" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="@dimen/text_margin"
-                android:textSize="18sp"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="@string/banks_and_cards_header"
-                android:layout_row="3"
-                android:layout_column="0" />
-
             <!-- Takes user to cash out screen -->
             <Button
                 android:layout_width="wrap_content"
@@ -93,39 +85,36 @@
                 android:layout_gravity="end"
                 android:text="@string/string_cash_out_btn"
                 android:id="@+id/cash_out_btn"
+                android:textStyle="bold"
+                android:padding="10dp"
                 android:layout_row="0"
-                android:layout_column="1" />
+                android:layout_column="1"
+                android:background="@color/green"
+                android:layout_marginBottom="15dp"/>
 
-            <Button
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
-                android:textSize="18sp"
+                android:textSize="24sp"
+                android:textStyle="bold"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="@string/wage"
                 android:layout_row="1"
-                android:layout_column="1" />
+                android:layout_column="1"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="30dp"/>
 
             <!-- Takes user to task history screen -->
-            <Button
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
-                android:textSize="18sp"
+                android:textSize="24sp"
+                android:textStyle="bold"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="@string/tasks_completed"
                 android:layout_row="2"
-                android:layout_column="1" />
-
-            <!-- Takes user to edit payment info screen -->
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:textSize="18sp"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="@string/account_number"
-                android:layout_row="3"
                 android:layout_column="1" />
 
         </GridLayout>
