connect all cashout acitivities. Add toast notifications for cashout.

--- a/app/src/main/res/layout/activity_cashout_bank.xml
+++ b/app/src/main/res/layout/activity_cashout_bank.xml
@@ -67,7 +67,7 @@
 
             <Button
                 android:id="@+id/verify_button"
-                android:text="verify"
+                android:text="Verify"
                 style="?android:textAppearanceSmall"
                 android:textColor="@color/white"
                 android:background="@color/green"
