--- a/app/src/main/res/layout/fragment_settings_tab.xml
+++ b/app/src/main/res/layout/fragment_settings_tab.xml
@@ -119,9 +119,10 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="10dp"
         android:layout_alignTop="@id/divider_3"
-         android:textSize="@dimen/settings_font_size"
+        android:textSize="@dimen/settings_font_size"
         android:textColor="@color/black"
-        android:text="@string/settings_log_out" />
+        android:text="@string/settings_log_out"
+        android:focusable="true"/>
 
     <ImageView
         android:id="@+id/settings_log_out_icon"
@@ -131,7 +132,8 @@
         android:layout_marginRight="20dp"
         android:layout_alignTop="@id/settings_log_out_text"
         android:layout_alignParentRight="true"
-        android:src="@drawable/power_button_icon" />
+        android:src="@drawable/power_button_icon"
+        android:focusable="true"/>
 
 
 </RelativeLayout>
