--- a/app/src/main/res/layout/activity_secluded_task_middle2.xml
+++ b/app/src/main/res/layout/activity_secluded_task_middle2.xml
@@ -81,7 +81,7 @@
                     android:id="@+id/btnNext"
                     android:text="NEXT"
                     android:textColor="@color/white"
-                    android:background="@color/black"
+                    android:background="@color/green"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight=".10"
