--- a/app/src/main/res/layout/activity_secluded_task_start.xml
+++ b/app/src/main/res/layout/activity_secluded_task_start.xml
@@ -66,7 +66,7 @@
                 android:text="Next"
                 style="?android:textAppearanceSmall"
                 android:textColor="@color/white"
-                android:background="@color/black"
+                android:background="@color/green"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
