--- a/app/src/main/res/layout/activity_two_handed_task.xml
+++ b/app/src/main/res/layout/activity_two_handed_task.xml
@@ -32,7 +32,7 @@
                 android:text="Q1: Please describe the steps you normally take when grocery shopping."
                 android:textSize="18dp"
                 android:layout_width="fill_parent"
-                android:layout_height="70dp"
+                android:layout_height="fill_parent"
                 android:gravity="center_vertical|center_horizontal"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:layout_gravity="center_horizontal"
@@ -49,7 +49,7 @@
                 android:text="Q2: Please describe the steps you normally take when grocery shopping."
                 android:textSize="18dp"
                 android:layout_width="fill_parent"
-                android:layout_height="70dp"
+                android:layout_height="fill_parent"
                 android:gravity="center_vertical|center_horizontal"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:layout_gravity="center_horizontal"
@@ -62,7 +62,7 @@
                 android:layout_height="100dp"/>
 
             <Button
-                android:id="@+id/sh_submit_button"
+                android:id="@+id/submit_button"
                 android:text="Submit"
                 style="?android:textAppearanceSmall"
                 android:textColor="@color/white"
