--- a/app/src/main/res/layout/activity_secluded_task_middle1.xml
+++ b/app/src/main/res/layout/activity_secluded_task_middle1.xml
@@ -71,6 +71,7 @@
                     android:id="@+id/back_button"
                     android:text="BACK"
                     android:background="@color/dark_gray"
+                    android:textColor="@color/white"
                     android:layout_width="0dp"
                     android:layout_height="fill_parent"
                     android:layout_weight=".10"
