--- a/app/src/main/res/layout/fragment_payment_tab.xml
+++ b/app/src/main/res/layout/fragment_payment_tab.xml
@@ -99,6 +99,7 @@
                 android:textSize="24sp"
                 android:textStyle="bold"
                 android:textAppearance="?android:attr/textAppearanceSmall"
+                android:id="@+id/tasks_completed1"
                 android:text="@string/wage"
                 android:layout_row="1"
                 android:layout_column="1"
@@ -113,6 +114,7 @@
                 android:textSize="24sp"
                 android:textStyle="bold"
                 android:textAppearance="?android:attr/textAppearanceSmall"
+                android:id="@+id/tasks_completed2"
                 android:text="@string/tasks_completed"
                 android:layout_row="2"
                 android:layout_column="1" />
