--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <color name="white">#ffffffff</color>
     <color name="black">#ff000000</color>
     <color name="red">#FF0000</color>
     <color name="green2">#82a53d</color>
     <color name="green">#85B064</color>
     <color name="dark_gray">#555555</color>
+    <color name="black_overlay">#66000000</color>
+
 </resources>
