--- a/app/src/main/res/layout/fragment_payment_tab.xml
+++ b/app/src/main/res/layout/fragment_payment_tab.xml
@@ -107,7 +107,7 @@
                 android:layout_marginBottom="30dp"/>
 
             <!-- Takes user to task history screen -->
-            <TextView
+            <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
@@ -117,6 +117,7 @@
                 android:id="@+id/tasks_completed2"
                 android:text="@string/tasks_completed"
                 android:layout_row="2"
+                android:background="@color/green"
                 android:layout_column="1" />
 
         </GridLayout>
